bk_ida/gccida/g2/_cpp_temp_token
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1245:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 * cpp_temp_token( cpp_reader_0 *pfile) 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1245:31: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_token_0 * cpp_temp_token( cpp_reader_0 *pfile) 
                              ^~~~~~~~~~~~
                              cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1247:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *cur_token; // rbp 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1248:1: error: unknown type name 'tokenrun_0'; did you mean 'tokenrun'?
tokenrun_0 *cur_run; // r12 
^~~~~~~~~~
tokenrun
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpphash.h:97:25: note: 'tokenrun' declared here
typedef struct tokenrun tokenrun;
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1249:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *result; // rax 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1250:1: error: unknown type name 'tokenrun_0'; did you mean 'tokenrun'?
tokenrun_0 *next; // rax 
^~~~~~~~~~
tokenrun
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpphash.h:97:25: note: 'tokenrun' declared here
typedef struct tokenrun tokenrun;
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1251:1: error: unknown type name 'tokenrun_0'; did you mean 'tokenrun'?
tokenrun_0 *v5; // rax 
^~~~~~~~~~
tokenrun
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpphash.h:97:25: note: 'tokenrun' declared here
typedef struct tokenrun tokenrun;
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1252:1: error: unknown type name 'tokenrun_0'; did you mean 'tokenrun'?
tokenrun_0 *v6; // r13 
^~~~~~~~~~
tokenrun
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpphash.h:97:25: note: 'tokenrun' declared here
typedef struct tokenrun tokenrun;
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1253:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *v7; // rax 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1263:20: error: expected expression
v5 = ( tokenrun_0 *)xmalloc( 0x20uLL); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1263:8: error: use of undeclared identifier 'tokenrun_0'
v5 = ( tokenrun_0 *)xmalloc( 0x20uLL); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1267:21: error: expected expression
v7 = ( cpp_token_0 *)xmalloc( 0x1770uLL); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1267:8: error: use of undeclared identifier 'cpp_token_0'; did you mean 'cur_token'?
v7 = ( cpp_token_0 *)xmalloc( 0x1770uLL); 
       ^~~~~~~~~~~
       cur_token
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/cpplex.c:1247:14: note: 'cur_token' declared here
cpp_token_0 *cur_token; // rbp 
             ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_cpp_temp_token/src/obj/cpplex.o] Error 1
